RESOLVED FIXED250437
REGRESSION(258290@main) [WPE] API test failures due to usage of deprecated properties
https://bugs.webkit.org/show_bug.cgi?id=250437
Summary REGRESSION(258290@main) [WPE] API test failures due to usage of deprecated pr...
Lauro Moura
Reported 2023-01-10 21:10:52 PST
Example to reproduce: ./Tools/Scripts/run-wpe-tests --release --display-server=headless WebKitBuild/WPE/Release/bin/TestWebKitAPI/WPE/TestAutomationSession -p /webkit/WebKitAutomationSession/request-session Output: TEST: /app/webkit/Tools/glib/../../WebKitBuild/Release/bin/TestWebKitAPI/WPE/TestAutomationSession... GLib-DEBUG: setenv()/putenv() are not thread-safe and should not be used after threads are created /webkit/WebKitAutomationSession/request-session: FAIL GLib-GObject-FATAL-CRITICAL: g_object_new_is_valid_property: object class 'WebKitWebsiteDataManager' has no property named 'local-storage-directory'
Attachments
Lauro Moura
Comment 1 2023-01-10 21:14:11 PST
EWS
Comment 2 2023-01-11 10:56:53 PST
Committed 258793@main (f21dd951eca5): <https://commits.webkit.org/258793@main> Reviewed commits have been landed. Closing PR #8509 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.