REGRESSION(258290@main) [WPE] API test failures due to usage of deprecated properties https://bugs.webkit.org/show_bug.cgi?id=250437

Reviewed by Michael Catanzaro.

The changes below were enough to avoid the missing property issue
runnign the API tests, but looks like there are some untested paths that
might be using the deprecated functions.

There are other unrelated failures though, to be tackled in future
commits.

* Source/WebKit/UIProcess/API/glib/WebKitWebContext.cpp:
(webkitWebContextConstructed):
* Tools/TestWebKitAPI/glib/WebKitGLib/TestMain.h:
(Test::Test):

Canonical link: https://commits.webkit.org/258793@main